# microscope_check_beads_analysis

./: README.md  beads_output.py  beads_test_notebook.ipynb  main.py  pyproject.toml
