[project]
name = "enzeavour-chymortypsin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "analysisrun",
    "cowsay>=6.1",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
]

[tool.uv.sources]
analysisrun = { git = "https://github.com/cosomil/analysisrun", tag = "v0.0.6" }
